<resources>
    <string name="app_name">EntertainmentStudio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">News Entertainment!!</string>
    <string name="nav_header_subtitle">Get the latest updates!!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_help">Help</string>
    <string name="menu_news_details">News</string>
    <string name="about_us_content"><![CDATA[
    Get the latest sports news curated from reliable sources, all in one place.<br/><br/>
    <b>In-Depth Coverage:</b> Dive deeper into detailed news stories for an enhanced reading experience.<br/><br/>
    <b>Personalized Experience:</b> Save your favorite news articles to read offline anytime, anywhere.<br/><br/>
    <b>Fast and Intuitive:</b> Enjoy a smooth and user-friendly interface designed for sports enthusiasts.<br/><br/>
    <b>All Things Sports:</b> From trending highlights to exclusive stories, we bring the sports world closer to you.
    ]]></string>
    <string name="background">background</string>
    <string name="empty_save_list_text">Your favourites is empty! Go READ and SAVE your FAVOURITE NEWS!!!</string>
    <string name="lets_read">Let\'s READ!</string>
    <string name="news_image">news image</string>
    <string name="like">like</string>
    <string name="bg_image">bg_image</string>
    <string name="help_us_text"><![CDATA[
The application is built using a single activity, with multiple fragments managing the UI and functionality. This ensures efficient navigation and a clean architecture. <br/><br/>
<b>Room Database:</b> The app uses Room Database to store and manage news articles locally. Data is scraped from various news websites and saved for offline access. <br/><br/>
<b>Global News Coverage:</b> The app displays the latest news articles from around the world. The data is dynamically loaded from the local database for a smooth user experience. <br/><br/>
<b>Navigation Drawer:</b> A user-friendly navigation drawer allows seamless switching between different sections of the app, such as <b>HOME</b>, <b>LIKE NEWS</b>, <b>ABOUT US</b>, <b>HELP</b>. <br/><br/>
<b>Offline Access:</b> Users can save news articles for offline reading. Saved articles can be easily accessed via the <b>Saved News</b> section in the navigation drawer.
]]></string>
</resources>